saving some of the updated about us page

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -13,14 +13,14 @@ code {
 		monospace;
 }
 
-.app {
-	display         : flex;
-	height          : 100%;
-	width           : 100%;
-	text-align      : center;
-	background-color: $pale-yellow;
-	min-height      : 500px;
-}
+// .app {
+// 	display         : flex;
+// 	height          : 100%;
+// 	width           : 100%;
+// 	text-align      : center;
+// 	background-color: $pale-yellow;
+// 	min-height      : 500px;
+// }
 
 #root {
 	background-color: $pale-yellow;
