Saving some updated styling for landing page and about us

--- a/src/App.scss
+++ b/src/App.scss
@@ -10,6 +10,7 @@
 @import "./scss/team-dashboard.scss";
 @import "./scss/user-profile.scss";
 @import "./scss/home.scss";
+@import "./scss/about.scss";
 
 // components
 
