--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -9,14 +9,14 @@
 }
 
 @mixin texts() {
-	font-family: "Merriweather", sans-serif;
+	font-family: 'Roboto', sans-serif;
 	color: $color-3;
 	font-size: 1.6rem;
 }
 
 @mixin userDashHeaderFont() {
 	color: $alpaca-green;
-	font-family: Pacifico;
+	font-family: Roboto;
 	font-style: normal;
 	font-weight: normal;
 	font-size: 36px;
