--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -12,7 +12,7 @@ $dark-grey   : #323A45;
 $black       : #000000;
 
 /*===== FONT =====*/
-$family: "Pacifico";
+$family: "Roboto";
 $lg-heading-font-size: 36px;
 $sm-text-size        : 14px;
 $md-text-size        : 25px;
