--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -1,114 +1,93 @@
-.ant-row.auth-page {
-	width: 100%;
-	@media( max-width: 900px ) {
+div.login{
+	background-color:#F5F5F5;
+	height:100vh;
+	width:100%;
+	display:flex;
+	justify-content:center;
+	margin-left: 400px;
+
+	nav{
 		display: flex;
-		flex-direction: column;
-	}
-	.ant-col.auth-main {
-		height: 100%;
-		display: flex;
-		height: 100%;
+		flex-direction: row;
 		justify-content: space-between;
 		align-items: center;
-		flex-direction: column;
-		@media( max-width: 600px ) {
-			justify-content: flex-start;
-		}
-		span {
-			padding: 20px 40px;
-			align-self: flex-end;
-			font-size: 14px;
-			@media( max-width: 900px ) {
-				padding: 0 0 15px 0;
-				align-self: center;
-				order: 3;
-			}
-		}
-		.auth-content {
-			display: flex;
-			flex-direction: column;
-			justify-content: center;
-			height: 100%;
-			p {
-				font-size: 16px;
-				margin-bottom: 20px;
-			}
-			span {
-				padding: 0;
-				justify-content: center;
-			}
-			h1 {
-				font-size: 30px;
-				font-weight: normal;
-			}
-		}
-	}
-	.auth-sider {
-		background-color: $alpaca-green;
-		height: 100vh;
-		display: flex;
-		justify-content: center;
-		align-items: center;
+		height: 80px;
+		width: 100vw;
 		padding: 20px;
-		min-width: 300px;
-		img {
-			max-width: 100%;
-			max-height: 100%;
+		text-shadow: none;
+		bottom: 0px;
+		background-color: #7B68EE;
+		opacity: 1;
+		position: fixed;
+		top: 0px;
+		* {
+			margin:10px;
 		}
-		.alpaca-logo-no-text, p {
-			display: none;
-		}
-		@media( max-width: 900px ) {
-			justify-content: flex-start;
-			padding: 10px;
-			width: 100%;
-			height: auto;
-			align-items: center;
-			img {
-				max-width: 80px;
-			}
-			.alpaca-logo {
-				display: none;
-			}
-			.alpaca-logo-no-text, p {
-				display: flex;
-				align-items: center;
-			}
-			p {
-				color: white;
-				font-family: Pacifico;
-				font-style: normal;
-				font-weight: normal;
-				font-size: 36px;
-				margin: 0 0 0 15px;;
-			}
-		}
-	}
-	a {
-		color: $dark-blue;
-	}
-	.ant-form {
-		margin-bottom: 60px;
-		display: flex;
-		flex-direction: column;
-		align-items: center;
-		@media( max-width: 900px ) {
-			margin-bottom: 0;
-		}
-		.register-form-button, .login-form-button {
-			@include button($alpaca-green);
-			width: 144px;
-			margin-top: 20px;
-		}
-		.ant-form-item {
-			margin-bottom: 0;
-			width: 268px;
-		}
-		.ant-form-item-label {
+		z-index: 9999;
+		Link {
+			width: 30%;
+			min-width: 320px;
 			display: flex;
+			justify-content: flex-start;
+			font-size: 3rem;
+			font-weight: bolder;
+			color: white;
+
+			p:hover {
+				cursor: pointer;
+			}
+			Link:link{
+				color:white;
+			}
+			Link:visited{
+				color:#98FB98;
+			}
+			Link:hover{
+				color:#FF7F50;
+			}
+			
+		}	
+	}
+	.login-content{
+		display:flex;
+		justify-content:center;
+		flex-direction:column;
+		width: 100vw;
+		height: 100vh;
+		margin-top:100px;
+		
+
+		.formEmail{
+		width: 40%;
+		display:flex;
+		flex-direction: column;
+		// justify-content:center;
 		}
-		.ant-form-item-label > label::after {
-			content: '';
+		.formPassword{
+		width:40%;
+		display:flex;
+		flex-direction:column;
+		justify-content:center;
+		}
+		.buttons{
+		display:flex;
+		flex-direction:column;
+		justify-content:space-evenly;
+		margin: 40px;
+		
+
+		.login-form-button{
+			background-color: #7B68EE;
+			width: 30%;
+			color:white;
+			border: 1px solid white;
+			&:hover{
+				color: #FF7F50;
+				background-color: white;
+				border: 1px solid #7B68EE;
+				}
+			}
 		}
 	}
+	
 }
