--- a/src/scss/home.scss
+++ b/src/scss/home.scss
@@ -78,13 +78,23 @@ header.home {
 				width: 100%;
 				
 
-				.blob1, .blob2, .blob3, .blob4{
+				 .blob1, .blob2, .blob3, .blob4{
 					display:flex;
 					flex-direction:column;
 					justify-content:center;
 					text-align: center;
 					width: 50%;
 					margin: 40px;
+				}
+				
+				.blob1{
+					max-width: 100%;
+					background: url('../imgs/Ellipse70.png') no-repeat;
+					background-size:cover;
+					background-attachment: fixed; 
+    				// background-repeat: no-repeat;
+    				background-position: center; 
+    				// position: relative;
 				}
 			}
 			div.footNote{
