--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -18,7 +18,7 @@ code {
 // 	height          : 100%;
 // 	width           : 100%;
 // 	text-align      : center;
-// 	background-color: $pale-yellow;
+// 	// background-color: $pale-yellow;
 // 	min-height      : 500px;
 // }
 
