--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -17,7 +17,7 @@
 .jumbotron {
 	height          : 185px;
 	background-color: $pale-yellow;
-	text-align      : right;
+	text-align      : left;
 
 	.breadcrumb {
 		font-size      : $md-text-size;
