end of day commit, adds redux changes and route handling for updated oauth flow

--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,28 +1,26 @@
 /*===== COLORS =====*/
-$alpaca-green: #93D800;
-$alpaca-green-alpha: #93D800;
-$alpaca-blue : #001529;
-$pale-yellow : #FBFFDF;
-$pale-yellow-alpha: rgba(#FBFFDF, 0.3);
-$red         : #FF0000;
-$white       : #ffffff;
-$medium-grey : #728096;
-$dark-blue   : #021BFF;
-$dark-grey   : #323A45;
-$black       : #000000;
+$alpaca-green: #93d800;
+$alpaca-green-alpha: #93d800;
+$grey: #728096;
+$alpaca-blue: #001529;
+$pale-yellow: #fbffdf;
+$pale-yellow-alpha: rgba(#fbffdf, 0.3);
+$red: #ff0000;
+$white: #ffffff;
+$medium-grey: #728096;
+$dark-blue: #021bff;
+$dark-grey: #323a45;
+$black: #000000;
 
 /*===== FONT =====*/
 $family: "Pacifico";
 $lg-heading-font-size: 36px;
-$sm-text-size        : 14px;
-$md-text-size        : 25px;
+$sm-text-size: 14px;
+$md-text-size: 25px;
 
 /*===== SIZES =====*/
 $card-width: 175px;
 $card-spacing: 10px;
 $card-row-spacing: 10px;
 
-
 $color-3: #222; // box font color
-
-
