--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -1,6 +1,6 @@
 .ant-row.auth-page {
 	width: 100%;
-	@media( max-width: 900px ) {
+	@media (max-width: 900px) {
 		display: flex;
 		flex-direction: column;
 	}
@@ -11,14 +11,14 @@
 		justify-content: space-between;
 		align-items: center;
 		flex-direction: column;
-		@media( max-width: 600px ) {
+		@media (max-width: 600px) {
 			justify-content: flex-start;
 		}
 		span {
 			padding: 20px 40px;
 			align-self: flex-end;
 			font-size: 14px;
-			@media( max-width: 900px ) {
+			@media (max-width: 900px) {
 				padding: 0 0 15px 0;
 				align-self: center;
 				order: 3;
@@ -55,10 +55,11 @@
 			max-width: 100%;
 			max-height: 100%;
 		}
-		.alpaca-logo-no-text, p {
+		.alpaca-logo-no-text,
+		p {
 			display: none;
 		}
-		@media( max-width: 900px ) {
+		@media (max-width: 900px) {
 			justify-content: flex-start;
 			padding: 10px;
 			width: 100%;
@@ -70,7 +71,8 @@
 			.alpaca-logo {
 				display: none;
 			}
-			.alpaca-logo-no-text, p {
+			.alpaca-logo-no-text,
+			p {
 				display: flex;
 				align-items: center;
 			}
@@ -80,7 +82,7 @@
 				font-style: normal;
 				font-weight: normal;
 				font-size: 36px;
-				margin: 0 0 0 15px;;
+				margin: 0 0 0 15px;
 			}
 		}
 	}
@@ -92,10 +94,11 @@
 		display: flex;
 		flex-direction: column;
 		align-items: center;
-		@media( max-width: 900px ) {
+		@media (max-width: 900px) {
 			margin-bottom: 0;
 		}
-		.register-form-button, .login-form-button {
+		.register-form-button,
+		.login-form-button {
 			@include button($alpaca-green);
 			width: 144px;
 			margin-top: 20px;
@@ -108,7 +111,7 @@
 			display: flex;
 		}
 		.ant-form-item-label > label::after {
-			content: '';
+			content: "";
 		}
 	}
 }
