changed dash over to teamReel branding left the team controls and team settings

--- a/src/scss/carousel.scss
+++ b/src/scss/carousel.scss
@@ -1,7 +1,7 @@
 .carousel {
 	display: flex;
-	//align-items: center;
-	position: relative;
+	align-items: center;
+	justify-content: center;
 	.carouselItems {
 		display: flex;
 		//flex-grow: 1;
