--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -88,7 +88,7 @@ h1 {
 .dashboard-header {
 	display        : flex;
 	align-items    : center;
-	justify-content: space-between;
+	justify-content: center;
 	padding        : 0 40px;
 
 	button {
@@ -104,3 +104,4 @@ h1 {
 		}
 	}
 }
+
