--- a/src/scss/user-dashboard.scss
+++ b/src/scss/user-dashboard.scss
@@ -4,3 +4,11 @@
 	justify-content: flex-start;
 	margin: 20px 30px;
 }
+.ant-menu-item{
+	background-color:#6954EA;
+	max-width: 90%;
+
+	.ant-menu-item-selected{
+		background-color:#6954EA;
+	}
+}
