--- a/src/scss/mixins.scss
+++ b/src/scss/mixins.scss
@@ -15,7 +15,7 @@
 }
 
 @mixin userDashHeaderFont() {
-	color: $alpaca-green;
+	color: whitesmoke;
 	font-family: Pacifico;
 	font-style: normal;
 	font-weight: normal;
@@ -24,6 +24,6 @@
 	display: flex;
 	align-items: center;
 	&:hover {
-		color: $alpaca-green;
+		color: whitesmoke;
 	}
 }
