--- a/src/scss/team-card.scss
+++ b/src/scss/team-card.scss
@@ -20,7 +20,7 @@
 		align-items: center;
 		div {
 			background-color: white;
-			border: 2px dashed $alpaca-green;
+			border: 2px dashed #6954EA;
 			width: 60px;
 			height: 60px;
 			border-radius: 50%;
@@ -28,7 +28,7 @@
 			justify-content: center;
 			align-items: center;
 			i {
-				color: $alpaca-green;
+				color: #6954EA;
 			}
 		}
 	}
