--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -13,12 +13,15 @@ code {
 		monospace;
 }
 
+.app{
+	background-color:#F5F5F5;
+}
 // .app {
 // 	display         : flex;
 // 	height          : 100%;
 // 	width           : 100%;
 // 	text-align      : center;
-// 	// background-color: $pale-yellow;
+// 	background-color: #F5F5F5;
 // 	min-height      : 500px;
 // }
 
