finished styling landing page

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -40,7 +40,7 @@ div.header{
 			font-size: 1.5rem;
 			font-weight: bolder;
 			color: white;
-
+			
 			p:hover {
 				cursor: pointer;
 			}
@@ -48,7 +48,7 @@ div.header{
 				color:white;
 			}
 			Link:visited{
-				color:#98FB98;
+				color:white;
 			}
 			Link:hover{
 				color:#FF7F50;
@@ -59,7 +59,7 @@ div.header{
 				color: white;
 			}
 			a:visited {
-				color: #98FB98;				;
+				color: white;				;
 			}
 			a:hover {
 				color:#FF7F50 ;
@@ -78,7 +78,7 @@ div.header{
 					color:#FF7F50;
 				}
 				&:focus {
-					color: #98FB98;
+					color: white;
 				}	
 			}	
 			
