--- a/src/scss/auth.scss
+++ b/src/scss/auth.scss
@@ -24,12 +24,14 @@ div.auth{
 		}
 		z-index: 9999;
 		.title {
-			color:white;
-			width: 25%;
-			min-width: 320px;
+			width: 10%;
 			text-align: right;
 			display: flex;
 			justify-content: center;
+
+			img{
+				max-width: 100%;
+			}
 		}
 		.authLinks{
 			font-size:1.5rem;
@@ -70,7 +72,10 @@ div.auth{
 			text-align: left;
 			color: #FF7F50;
 			border-bottom: 1px dashed #6954EA;
-        }
+		}
+		.create{
+			padding-top: 300px;
+		}
 		.authForm{
 			 display:flex;
 			 justify-content:center;
