updated profile and login

--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -52,10 +52,10 @@ div.header{
 				color: white;
 			}
 			a:visited {
-				color: white;				;
+				color: white;				
 			}
 			a:hover {
-				color:#FF7F50 ;
+				color:#FF7F50;
 			}
 			* {
 				margin: 0 3%;
