--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -1,18 +1,23 @@
 .full-header {
-	text-align    : left;
-	padding-top   : 10px;
-	padding-bottom: 10px;
+	text-align: left;
+	height: 80px;
+	padding: 20px;
 	background-color: #6954EA;
 	color: white;
 
-	.userDashHeaderFont {
-		color      : white;
-		font-family: Pacifico;
-		font-style : normal;
-		font-weight: normal;
-		font-size  : 36px;
-		line-height: 36px;
+
+	.title {
+		width: 10%;
+		text-align: right;
+		display: flex;
+		justify-content: center;
+
+		img{
+			max-width: 100%;
+			margin-left: 100px;
+		}
 	}
+
 }
 
 
@@ -59,7 +64,7 @@
 	}
 
 	label {
-		color    : $alpaca-blue;
+		color: #FF7F50;
 		font-size: 16px;
 	}
 
@@ -92,7 +97,7 @@
 
 	img {
 		border-radius: 50%;
-		border       : 3px solid #fff;
+		border       : 3px solid #FF7F50;
 	}
 }
 
