--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -26,7 +26,7 @@ code {
 // }
 
 #root {
-	background-color: $pale-yellow;
+	background-color: #F5F5F5;
 	height          : 100%;
 }
 
@@ -46,9 +46,11 @@ h1 {
 .container {
 	max-width: 1000px;
 	width    : 100%;
+	height: 250px;
 	margin   : auto;
 	padding  : 0 20px;
 	position : relative;
+
 }
 
 .card-flex {
