--- a/src/scss/video-card.scss
+++ b/src/scss/video-card.scss
@@ -1,9 +1,9 @@
 .actual-player {
 	width: 720px;
-	@media screen and (max-width:820px) {
+	@media screen and (max-width: 820px) {
 		width: 540px;
 	}
-	@media screen and (max-width:600px) {
+	@media screen and (max-width: 600px) {
 		width: 320px;
 	}
 }
@@ -27,15 +27,12 @@
 		color: inherit;
 		border-color: rgb(217, 217, 217);
 	}
-	&:focus, &:active {
+	&:focus,
+	&:active {
 		color: inherit;
 		border-color: rgb(217, 217, 217);
 	}
-
 }
-
-
-
 
 .video-card {
 	cursor: pointer;
@@ -46,7 +43,7 @@
 		flex-direction: column;
 		justify-content: center;
 		background-color: black;
-		margin-bottom:  20px;
+		margin-bottom: 20px;
 	}
 	.ant-card-body {
 		overflow: hidden;
@@ -59,7 +56,7 @@
 			margin: 0;
 		}
 		.ant-card-meta-description {
-			font-size: .75rem;
+			font-size: 0.75rem;
 			:after {
 				content: "";
 				text-align: right;
@@ -75,3 +72,11 @@
 	}
 }
 
+input[type="radio"] {
+	display: none;
+}
+
+.star {
+	cursor: pointer;
+	transition: color 200ms;
+}
