--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -51,7 +51,7 @@
 
 .profile-main {
 	background-color: #fff;
-	height          : 100%;
+	height: 580px;
 
 	.outlined-btn {
 		@include outlined-button(#6954EA);
