--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -96,6 +96,10 @@ h1 {
 	justify-content: center;
 	padding        : 0 40px;
 
+	h2{
+		margin-right: 2%;
+	}
+
 	button {
 		@include button($alpaca-green);
 		min-width: 142px;
