--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -22,7 +22,7 @@
 
 
 .jumbotron {
-	height          : 185px;
+	height          : 85px;
 	background-color:#F5F5F5;
 	text-align      : left;
 
@@ -51,7 +51,7 @@
 
 .profile-main {
 	background-color: #fff;
-	height: 580px;
+	height: 100vh;
 
 	.outlined-btn {
 		@include outlined-button(#6954EA);
@@ -104,7 +104,7 @@
 .avatar-wrapper {
 	text-align: center;
 	position  : absolute;
-	top       : -75px;
+	top       : 90px;
 
 	a {
 		font-size: $sm-text-size;
