--- a/src/scss/user-profile.scss
+++ b/src/scss/user-profile.scss
@@ -1,9 +1,27 @@
 .full-header {
-	text-align: left;
+	// text-align: left;
+	// height: 80px;
+	// padding: 20px;
+	// background-color: #6954EA;
+	// color: white;
+
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
 	height: 80px;
+	width: 100vw;
 	padding: 20px;
+	text-shadow: none;
+	bottom: 0px;
 	background-color: #6954EA;
-	color: white;
+	opacity: 1;
+	position: fixed;
+	top: 0px;
+		* {
+			margin:10px;
+		}
+		z-index: 9999;
 
 
 	.title {
@@ -15,6 +33,8 @@
 		img{
 			max-width: 100%;
 			margin-left: 100px;
+			object-fit: contain;
+			margin-bottom: 4%;
 		}
 	}
 
@@ -25,6 +45,7 @@
 	height          : 85px;
 	background-color:#F5F5F5;
 	text-align      : left;
+	margin-top: 80px;
 
 	.breadcrumb {
 		font-size      : $md-text-size;
