--- a/src/scss/variables.scss
+++ b/src/scss/variables.scss
@@ -1,6 +1,6 @@
 /*===== COLORS =====*/
-$alpaca-green: #93d800;
-$alpaca-green-alpha: #93d800;
+$alpaca-green: #FF7F50;
+$alpaca-green-alpha: #FF7F50;
 $grey: #728096;
 $alpaca-blue: #001529;
 $pale-yellow: #fbffdf;
