added results page

--- a/src/scss/global.scss
+++ b/src/scss/global.scss
@@ -110,8 +110,9 @@ h1 {
 		}
 	}
 }
-// .ResultsModal {
-// 	display: flex;
-// 	flex-direction: column;
-// 	lin
-// }
+.resultsPage {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+}
