completed the results page aswell as made changes to the edit teams modal

--- a/src/scss/user-dashboard.scss
+++ b/src/scss/user-dashboard.scss
@@ -4,11 +4,14 @@
 	justify-content: flex-start;
 	margin: 20px 30px;
 }
-.ant-menu-item{
-	background-color:#6954EA;
+.ant-menu-item {
+	background-color: #6954ea;
 	max-width: 90%;
 
-	.ant-menu-item-selected{
-		background-color:#6954EA;
+	.ant-menu-item-selected {
+		background-color: #6954ea;
 	}
+}
+.ant-menu-inline {
+	border-right: none;
 }
