--- a/src/scss/user-dashboard.scss
+++ b/src/scss/user-dashboard.scss
@@ -15,3 +15,16 @@
 .ant-menu-inline {
 	border-right: none;
 }
+
+.logo {
+	width: 80%;
+	text-align: center;
+	display: flex;
+	justify-content: center;
+	margin-left: 10%;
+
+	img{
+		max-width: 100%;
+		object-fit: contain;
+	}
+}
